config/openstack/arc/api-service.yaml
kind: Service
apiVersion: v1

metadata:
  annotations:
    prometheus.io/scrape: "true"  
  name: api 
  namespace: arc

spec:
  type: ClusterIP 
  selector:
    name: api 
  ports: 
    - port: 80
