config/openstack/arc/mosquitto-service-eu-de-1.yaml
kind: Service
apiVersion: v1

metadata:
  name: mosquitto 
  namespace: arc

spec:
  type: ClusterIP 
  selector:
    name: mosquitto 
  ports: 
    - port: 8883 
  externalIPs: [ 10.46.2.201 ]
