config/openstack/arc/pki-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: pki 
  namespace: arc

spec:
  type: ClusterIP 
  selector:
    name: pki 
  ports: 
    - port: 80
