config/openstack/arc/postgres-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: postgres 

spec:
  selector:
    name: postgres 
  ports: 
    - port: 5432
