config/openstack/arc/updates-proxy-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: updates-proxy
  namespace: arc

spec:
  type: ClusterIP 
  selector:
    name: updates-proxy
  ports: 
    - port: 80
