config/openstack/arc/updates-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: updates

spec:
  type: ClusterIP 
  selector:
    name: updates
  ports: 
    - port: 80
